[tool.poetry]
name = "harubooru"
version = "0.1.0"
description = "Harubooru is a simple, API based imageboard server."
authors = ["David Kurt <redfox@live.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
pydantic = "^1.9.0"
python-multipart = "^0.0.5"
SQLAlchemy = "^1.4.35"
psycopg2 = {version = "^2.9.3", optional = true}
mysqlclient = {version = "^2.1.0", optional = true}
webdavclient3 = {version = "^3.14.6", optional = true}
opencv-python-headless = "^4.5.5"

[tool.poetry.dev-dependencies]
pylint = "^2.13.0"
pytest = "^7.1.2"
Faker = "^13.7.0"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
hypothesis = "^6.46.3"

[tool.poetry.extras]
pgsql = ["psycopg2"]
mysql = ["mysqlclient"]
webdav = ["webdavclient3"]

[tool.poetry.scripts]
start = "harubooru.main:serve"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
